--- a/package.json
+++ b/package.json
@@ -57,6 +57,14 @@
     "ts-jest": "^27",
     "typescript": "^4.6.4"
   },
+  "dependencies": {
+    "@types/js-yaml": "*",
+    "js-yaml": "^4.1.0"
+  },
+  "bundledDependencies": [
+    "@types/js-yaml",
+    "js-yaml"
+  ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
