test: :white_check_mark: Added jest setupfile for exporting environment variables used within pipeline.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
+    "setupFiles": [
+      "./test/setupfiles/dotenv.ts"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
       "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
