--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsii-pacmak": "^1.83.0",
     "npm-check-updates": "^16",
     "projen": "^0.71.88",
+    "sanitize-filename": "^1.6.3",
     "standard-version": "^9",
     "ts-jest": "^27",
     "typescript": "^4.9.5"
