--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^16",
+    "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -53,7 +53,7 @@
     "jsii-pacmak": "^1.84.0",
     "jsii-rosetta": "~5.0.0",
     "npm-check-updates": "^16",
-    "projen": "^0.71.126",
+    "projen": "^0.71.129",
     "sanitize-filename": "^1.6.3",
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
@@ -66,6 +66,9 @@
   "bundledDependencies": [
     "js-yaml"
   ],
+  "engines": {
+    "node": ">= 18.0.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
