--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -61,10 +62,12 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
   },
   "bundledDependencies": [
-    "js-yaml"
+    "js-yaml",
+    "lodash"
   ],
   "engines": {
     "node": ">= 18.0.0"
