--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.195",
     "@types/node": "^18",
+    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -57,6 +58,7 @@
     "projen": "^0.71.129",
     "sanitize-filename": "^1.6.3",
     "standard-version": "^9",
+    "tmp": "^0.2.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
