--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,8 @@
 /.gitignore linguist-generated
 /.npmignore linguist-generated
 /.npmrc linguist-generated
+/.prettierignore linguist-generated
+/.prettierrc.json linguist-generated
 /.projen/** linguist-generated
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
