ci: :construction_worker: Added .gitlab-ci.ts and projen configuraton.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
     "node_modules/",
     "*.generated.ts",
     "coverage",
+    "!.gitlab-ci.ts",
     "!.projenrc.ts",
     "!projenrc/**/*.ts"
   ],
