--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -230,7 +230,8 @@
       "name": "release",
       "description": "Prepare a release from \"main\" branch",
       "env": {
-        "RELEASE": "true"
+        "RELEASE": "true",
+        "PRERELEASE": "pre"
       },
       "steps": [
         {
