docs: :memo: Added dependencies for mkdocs documentation tool.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,8 @@
     "coverage",
     "!.gitlab-ci.ts",
     "!.projenrc.ts",
+    "!projenrc/**/*.ts",
+    "!.projenrc.ts",
     "!projenrc/**/*.ts"
   ],
   "rules": {
@@ -133,6 +135,15 @@
     ]
   },
   "overrides": [
+    {
+      "files": [
+        ".projenrc.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-require-imports": "off",
+        "import/no-extraneous-dependencies": "off"
+      }
+    },
     {
       "files": [
         ".projenrc.ts"
