--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "compile": "npx projen compile",
     "default": "npx projen default",
     "docgen": "npx projen docgen",
+    "docs:api": "npx projen docs:api",
+    "docs:dependencies": "npx projen docs:dependencies",
+    "docs:serve": "npx projen docs:serve",
     "eject": "npx projen eject",
     "eslint": "npx projen eslint",
     "gcix:gen": "npx projen gcix:gen",
