--- a/.gitattributes
+++ b/.gitattributes
@@ -16,5 +16,6 @@
 /API.md linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
+/requirements.txt linguist-generated
 /tsconfig.dev.json linguist-generated
 /yarn.lock linguist-generated
