--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "publish:git": "npx projen publish:git",
     "release": "npx projen release",
     "test": "npx projen test",
+    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
-    "projen": "npx projen",
-    "test:update": "UPDATE_TEST_OUTPUT=true npx projen test",
-    "gcix:gen": "npx ts-node .gitlab-ci.ts"
+    "projen": "npx projen"
   },
   "author": {
     "name": "Daniel von Essen",
