build(projen): :wrench: Added gcix:gen command to projen.
gcix:gen command executed ts-node to generate the pipeline from .gitlab-ci.ts.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -130,6 +130,15 @@
         }
       ]
     },
+    "gcix:gen": {
+      "name": "gcix:gen",
+      "description": "Execute .gitlab-ci.ts and generate 'generated-config.yml'",
+      "steps": [
+        {
+          "exec": "npx ts-node .gitlab-ci.ts"
+        }
+      ]
+    },
     "install": {
       "name": "install",
       "description": "Install project dependencies and update lockfile (non-frozen)",
