--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "pre-compile": "npx projen pre-compile",
     "publish:git": "npx projen publish:git",
     "release": "npx projen release",
+    "release:common": "npx projen release:common",
+    "release:pre": "npx projen release:pre",
+    "release:tag": "npx projen release:tag",
     "test": "npx projen test",
     "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
