chore(projen): :wrench: Updated projen files.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
-    "ci:package": "npx projen ci:package",
-    "ci:publish-npmjs": "npx projen ci:publish-npmjs",
-    "ci:publish-pypi": "npx projen ci:publish-pypi",
+    "ci:install:deps": "npx projen ci:install:deps",
+    "ci:lint": "npx projen ci:lint",
+    "ci:package-all": "npx projen ci:package-all",
+    "ci:publish-all": "npx projen ci:publish-all",
+    "ci:publish:git": "npx projen ci:publish:git",
+    "ci:test": "npx projen ci:test",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
     "compile": "npx projen compile",
@@ -28,9 +31,6 @@
     "pre-compile": "npx projen pre-compile",
     "publish:git": "npx projen publish:git",
     "release": "npx projen release",
-    "release:common": "npx projen release:common",
-    "release:pre": "npx projen release:pre",
-    "release:tag": "npx projen release:tag",
     "test": "npx projen test",
     "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
