--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -41,18 +41,46 @@
       ],
       "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
     },
-    "ci:package": {
-      "name": "ci:package",
-      "description": "Task which will install dependencies from lock, write the\n    CI_COMMIT_TAG in package.json, spawns pre-compile, compile and package",
+    "ci:install:deps": {
+      "name": "ci:install:deps",
+      "description": "Install dependencies inside the CI environment.",
       "requiredEnv": [
         "CI"
       ],
       "steps": [
         {
-          "exec": "apt update && apt install -y python3-pip python3-venv jq"
+          "exec": "apt update && apt install -y python3-pip python3-venv jq rsync"
         },
         {
           "spawn": "install:ci"
+        }
+      ]
+    },
+    "ci:lint": {
+      "name": "ci:lint",
+      "description": "Executes eslint.",
+      "requiredEnv": [
+        "CI"
+      ],
+      "steps": [
+        {
+          "spawn": "ci:install:deps"
+        },
+        {
+          "spawn": "eslint"
+        }
+      ]
+    },
+    "ci:package-all": {
+      "name": "ci:package-all",
+      "description": "Task which will install dependencies from lock, write the\n    CI_COMMIT_TAG in package.json, spawns pre-compile, compile and package",
+      "requiredEnv": [
+        "CI",
+        "CI_COMMIT_TAG"
+      ],
+      "steps": [
+        {
+          "spawn": "ci:install:deps"
         },
         {
           "exec": "scripts/update_package_json_version.sh"
@@ -68,38 +96,95 @@
         }
       ]
     },
-    "ci:publish-npmjs": {
-      "name": "ci:publish-npmjs",
-      "description": "Publish produced artifact to npm registry.",
+    "ci:publish-all": {
+      "name": "ci:publish-all",
+      "description": "Publish produced artifacts to NPMjs and PyPi repository.",
       "requiredEnv": [
         "CI",
         "CI_COMMIT_TAG",
-        "NPM_TOKEN"
-      ],
-      "steps": [
-        {
-          "exec": "npm publish dist/js/*"
-        }
-      ]
-    },
-    "ci:publish-pypi": {
-      "name": "ci:publish-pypi",
-      "description": "Publish produced artifact to PyPi repository.",
-      "requiredEnv": [
-        "CI",
-        "CI_COMMIT_TAG",
+        "NPM_TOKEN",
         "TWINE_USERNAME",
         "TWINE_PASSWORD"
       ],
       "steps": [
         {
-          "exec": "apt update && apt install -y python3-pip"
+          "spawn": "ci:install:deps"
+        },
+        {
+          "exec": "npm publish dist/js/*"
         },
         {
           "exec": "pip install twine"
         },
         {
           "exec": "twine upload dist/python/*"
+        }
+      ]
+    },
+    "ci:publish:git": {
+      "name": "ci:publish:git",
+      "description": "Creates a new git tag and generates the CHANGELOG.md from\n  conventional commits",
+      "env": {
+        "RELEASE": "true"
+      },
+      "requiredEnv": [
+        "CI",
+        "CI_COMMIT_REF_NAME"
+      ],
+      "steps": [
+        {
+          "exec": "git clone --single-branch --branch \"${CI_COMMIT_REF_NAME}\" \"https://gitlab-ci-token:${GCIX_PUSH_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_PATH}.git\" \"${CI_COMMIT_SHA}\""
+        },
+        {
+          "exec": "cd ${CI_COMMIT_SHA}"
+        },
+        {
+          "exec": "git checkout -B ${CI_COMMIT_REF_NAME} remotes/origin/${CI_COMMIT_REF_NAME} --"
+        },
+        {
+          "exec": "git config --local user.name \"${GITLAB_USER_NAME}\""
+        },
+        {
+          "exec": "git config --local user.email \"${GITLAB_USER_EMAIL}\""
+        },
+        {
+          "spawn": "ci:install:deps"
+        },
+        {
+          "exec": "rm -fr dist"
+        },
+        {
+          "spawn": "bump"
+        },
+        {
+          "spawn": "pre-compile"
+        },
+        {
+          "spawn": "compile"
+        },
+        {
+          "spawn": "package-all"
+        },
+        {
+          "spawn": "unbump"
+        },
+        {
+          "spawn": "publish:git"
+        }
+      ]
+    },
+    "ci:test": {
+      "name": "ci:test",
+      "description": "Executes Jest tests.",
+      "requiredEnv": [
+        "CI"
+      ],
+      "steps": [
+        {
+          "spawn": "ci:install:deps"
+        },
+        {
+          "spawn": "test"
         }
       ]
     },
@@ -290,6 +375,9 @@
         },
         {
           "builtin": "release/tag-version"
+        },
+        {
+          "exec": "git push --follow-tags origin main"
         }
       ],
       "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
@@ -318,60 +406,6 @@
         },
         {
           "spawn": "publish:git"
-        }
-      ]
-    },
-    "release:common": {
-      "name": "release:common",
-      "steps": [
-        {
-          "spawn": "install:ci"
-        },
-        {
-          "exec": "rm -fr dist"
-        },
-        {
-          "spawn": "bump"
-        },
-        {
-          "spawn": "pre-compile"
-        },
-        {
-          "spawn": "compile"
-        },
-        {
-          "spawn": "test"
-        },
-        {
-          "spawn": "package"
-        },
-        {
-          "spawn": "unbump"
-        },
-        {
-          "spawn": "publish:git"
-        }
-      ]
-    },
-    "release:pre": {
-      "name": "release:pre",
-      "env": {
-        "PRERELEASE": "pre"
-      },
-      "steps": [
-        {
-          "spawn": "release:common"
-        }
-      ]
-    },
-    "release:tag": {
-      "name": "release:tag",
-      "env": {
-        "RELEASE": "true"
-      },
-      "steps": [
-        {
-          "spawn": "release:common"
         }
       ]
     },
