chore(projen): :construction_worker: Added new projen command to ci.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -128,24 +128,11 @@
         "RELEASE": "true"
       },
       "requiredEnv": [
-        "CI",
-        "CI_COMMIT_REF_NAME"
+        "CI"
       ],
       "steps": [
         {
-          "exec": "git clone --single-branch --branch \"${CI_COMMIT_REF_NAME}\" \"https://gitlab-ci-token:${GCIX_PUSH_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_PATH}.git\" \"${CI_COMMIT_SHA}\""
-        },
-        {
-          "exec": "cd ${CI_COMMIT_SHA}"
-        },
-        {
-          "exec": "git checkout -B ${CI_COMMIT_REF_NAME} remotes/origin/${CI_COMMIT_REF_NAME} --"
-        },
-        {
-          "exec": "git config --local user.name \"${GITLAB_USER_NAME}\""
-        },
-        {
-          "exec": "git config --local user.email \"${GITLAB_USER_EMAIL}\""
+          "spawn": "ci:setup:git"
         },
         {
           "spawn": "ci:install:deps"
@@ -170,6 +157,35 @@
         },
         {
           "spawn": "publish:git"
+        }
+      ]
+    },
+    "ci:setup:git": {
+      "name": "ci:setup:git",
+      "description": "Setup git clone for further building.",
+      "requiredEnv": [
+        "CI",
+        "CI_COMMIT_REF_NAME",
+        "CI_COMMIT_SHORT_SHA",
+        "GCIX_PUSH_USER",
+        "GCIX_PUSH_TOKEN",
+        "CI_SERVER_HOST",
+        "CI_PROJECT_PATH",
+        "GITLAB_USER_NAME",
+        "GITLAB_USER_EMAIL"
+      ],
+      "steps": [
+        {
+          "exec": "git clone --single-branch --branch \"${CI_COMMIT_REF_NAME}\" \"https://${GCIX_PUSH_USER}:${GCIX_PUSH_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_PATH}.git\" \"${CI_COMMIT_SHORT_SHA}\""
+        },
+        {
+          "exec": "cd ${CI_COMMIT_SHORT_SHA} && git checkout -B ${CI_COMMIT_REF_NAME} remotes/origin/${CI_COMMIT_REF_NAME} --"
+        },
+        {
+          "exec": "cd ${CI_COMMIT_SHORT_SHA} && git config --local user.name \"${GITLAB_USER_NAME}\""
+        },
+        {
+          "exec": "cd ${CI_COMMIT_SHORT_SHA} && git config --local user.email \"${GITLAB_USER_EMAIL}\""
         }
       ]
     },
