--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ci:package-all": "npx projen ci:package-all",
     "ci:publish-all": "npx projen ci:publish-all",
     "ci:publish:git": "npx projen ci:publish:git",
+    "ci:setup:git": "npx projen ci:setup:git",
     "ci:test": "npx projen ci:test",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
