chore(projen): :wrench: Removed gcix scope from package.json and added configuration for npmjs registry.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -111,6 +111,9 @@
           "spawn": "ci:install:deps"
         },
         {
+          "exec": "npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}"
+        },
+        {
           "exec": "npm publish dist/js/*"
         },
         {
