--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gcix/gcix",
+  "name": "gcix",
   "description": "GitLab CI X Library (X stands for multilanguage)",
   "repository": {
     "type": "git",
@@ -89,9 +89,6 @@
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
-  "publishConfig": {
-    "access": "public"
-  },
   "version": "0.0.0",
   "jest": {
     "setupFiles": [
