--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets:
       auto_append:
-        - includes/abbreviations.md
+        - docs/includes/abbreviations.md
   - pymdownx.superfences
   - admonition
   - pymdownx.details
