chore(projen): :wrench: Updated twine installation with flag --break-system-packages to ensure it is installed via pip

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -117,7 +117,7 @@
           "exec": "npm publish dist/js/*"
         },
         {
-          "exec": "pip install twine"
+          "exec": "pip install --break-system-packages twine"
         },
         {
           "exec": "twine upload dist/python/*"
