docs: :memo: Fixed misspelled GitLab.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Gitlab CI X Library Documentation
+site_name: GitLab CI X Library Documentation
 repo_url: https://gitlab.com/gcix/gcix
 repo_name: gcix/gcix
 edit_uri: edit/main/docs/
