docs: :memo: Added README.md to be watched by mkdocs and added new documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,8 @@ repo_url: https://gitlab.com/gcix/gcix
 repo_name: gcix/gcix
 edit_uri: edit/main/docs/
 site_dir: public/
-
+watch:
+  - README.md
 theme:
   name: material
   icon:
