--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "ci:install:deps": "npx projen ci:install:deps",
     "ci:lint": "npx projen ci:lint",
     "ci:package-all": "npx projen ci:package-all",
-    "ci:publish-all": "npx projen ci:publish-all",
     "ci:publish:git": "npx projen ci:publish:git",
+    "ci:publish:npm": "npx projen ci:publish:npm",
+    "ci:publish:pypi": "npx projen ci:publish:pypi",
     "ci:setup:git": "npx projen ci:setup:git",
     "ci:test": "npx projen ci:test",
     "clobber": "npx projen clobber",
