chore: :wrench: Removed --split-by-submodule true from docs:api projen command.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -293,7 +293,7 @@
       "description": "Generate api documentation with jsii-docgen",
       "steps": [
         {
-          "exec": "npx jsii-docgen -l typescript -l python --readme false --split-by-submodule true --output ./docs/api/"
+          "exec": "npx jsii-docgen -l typescript -l python --readme false --output ./docs/api/"
         }
       ]
     },
