--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -293,6 +293,9 @@
       "description": "Generate api documentation with jsii-docgen",
       "steps": [
         {
+          "spawn": "compile"
+        },
+        {
           "exec": "npx jsii-docgen -l typescript -l python --readme false --output ./docs/api/"
         }
       ]
