--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -296,7 +296,7 @@
           "spawn": "compile"
         },
         {
-          "exec": "npx jsii-docgen -l typescript -l python --readme false --output ./docs/api/"
+          "exec": "npx jsii-docgen -l typescript -l python --readme false --output ./docs/api/api"
         }
       ]
     },
