--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -531,25 +531,13 @@
           "exec": "yarn upgrade npm-check-updates"
         },
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='jsii-rosetta,jsii'"
-        },
-        {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='jsii-rosetta,jsii'"
-        },
-        {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='jsii-rosetta,jsii'"
-        },
-        {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='jsii-rosetta,jsii'"
-        },
-        {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='jsii-rosetta,jsii'"
+          "exec": "npm-check-updates --upgrade --target=minor --filter=@types/jest,@types/js-yaml,@types/lodash,@types/node,@types/tmp,@types/yargs,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,eslint-config-prettier,eslint-import-resolver-node,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,eslint,jest,jest-junit,jsii-diff,jsii-docgen,jsii-pacmak,npm-check-updates,prettier,projen,sanitize-filename,standard-version,tmp,ts-jest,ts-node,typescript,@aws-sdk/client-cloudformation,@aws-sdk/client-sts,js-yaml,lodash,yargs"
         },
         {
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade"
+          "exec": "yarn upgrade @types/jest @types/js-yaml @types/lodash @types/node @types/tmp @types/yargs @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-config-prettier eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest jest-junit jsii-diff jsii-docgen jsii-pacmak npm-check-updates prettier projen sanitize-filename standard-version tmp ts-jest ts-node typescript @aws-sdk/client-cloudformation @aws-sdk/client-sts js-yaml lodash yargs"
         },
         {
           "exec": "npx projen"
