--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,7 @@
 /API.md linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
+/renovate.json5 linguist-generated
 /requirements.txt linguist-generated
 /tsconfig.dev.json linguist-generated
 /yarn.lock linguist-generated
