chore(projen): :wrench: Added matcherManager for gitlabci to match node version.

--- a/renovate.json5
+++ b/renovate.json5
@@ -20,6 +20,15 @@
         "minor"
       ],
       "groupName": "devDependencies (non-major)"
+    },
+    {
+      "matchManagers": [
+        "gitlabci"
+      ],
+      "matchPackageNames": [
+        "node"
+      ],
+      "versioning": "node"
     }
   ],
   "ignoreDeps": [
