chore(projen): :wrench: Temporarily disabled generation of python documentation until https://github.com/cdklabs/jsii-docgen/issues/1104 is fixed.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -326,7 +326,7 @@
           "spawn": "compile"
         },
         {
-          "exec": "npx jsii-docgen -l typescript -l python --readme false --output ./docs/api/api"
+          "exec": "npx jsii-docgen -l typescript --readme false --output ./docs/api/api"
         }
       ]
     },
