chore(projen): :wrench: Added better api documentation script in projen api:docs command.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -326,7 +326,7 @@
           "spawn": "compile"
         },
         {
-          "exec": "npx jsii-docgen -l typescript --readme false --output ./docs/api/api"
+          "exec": "for i in root aws gitlab; do npx jsii-docgen --readme false -l typescript -l python --output docs/api/$i --submodule $i; done"
         }
       ]
     },
