docs: :memo: Add initial API documentation for the GCIX module
Created the API documentation for the GCIX module, providing insights into its features, supported flavors (TypeScript and Python), and usage guidelines. This documentation serves as a guide for programmatically defining and managing GitLab CI pipelines with ease.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ jspm_packages/
 .cache
 generated-config.yml
 __pycache__
+/docs/api/
+!/docs/api/index.md
 !/.projenrc.js
 /test-reports/
 junit.xml
