docs: :memo: Add table of contents depth setting
Added toc_depth: 3 to the configuration for generating the table of contents. This setting ensures that the table of contents will display up to a depth of three levels for improved navigation within the document.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
   - toc:
+      toc_depth: 3
       permalink: true
   - pymdownx.betterem:
       smart_enable: all
