chore: :green_heart: Commented addTags in .gitlab-ci.ts to ensure running on public runners to.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ generate-pipeline:
   artifacts:
     paths:
       - generated-config.yml
-  tags:
-    - gcix
+  # tags:
+  #   - gcix
 
 run-pipeline:
   stage: deploy
