chore(projen): :package: Added `gittagpep440conformity` as a binary distributable, it will be installed along the gcix and is invocable on the shell.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "url": "https://gitlab.com/gcix/gcix.git"
   },
   "bin": {
-    "cfnwaiter": "lib/aws/tools/cfnwaiter.js"
+    "cfnwaiter": "lib/aws/tools/cfnwaiter.js",
+    "gittagpep440conformity": "lib/python/tools/evaluate-git-tag-pep440-conformity.js"
   },
   "scripts": {
     "build": "npx projen build",
