chore(projen): :wrench: Upgrade setuptools while packaging.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -114,6 +114,9 @@
           "spawn": "ci:install:deps"
         },
         {
+          "exec": "pip install -U setuptools"
+        },
+        {
           "exec": "scripts/update_package_json_version.sh"
         },
         {
