ci: :green_heart: Added --break-system-packages cli option to pip install -U setuptools.

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -68,7 +68,7 @@
           "exec": "apt update && apt install -y python3-pip python3-venv jq rsync"
         },
         {
-          "exec": "pip install -U setuptools"
+          "exec": "pip install -U --break-system-packages setuptools"
         },
         {
           "spawn": "install:ci"
