--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -68,9 +68,6 @@
           "exec": "apt update && apt install -y python3-pip python3-venv jq rsync"
         },
         {
-          "exec": "pip install -U --break-system-packages setuptools"
-        },
-        {
           "spawn": "install:ci"
         }
       ]
@@ -114,6 +111,9 @@
       "steps": [
         {
           "spawn": "ci:install:deps"
+        },
+        {
+          "exec": "pip install -U setuptools || pip install -U --break-system-packages setuptools"
         },
         {
           "exec": "scripts/update_package_json_version.sh"
@@ -202,7 +202,7 @@
           "spawn": "ci:install:deps"
         },
         {
-          "exec": "pip install --break-system-packages twine"
+          "exec": "pip install -U twine || pip install --break-system-packages -U twine"
         },
         {
           "exec": "twine upload dist/python/*"
