--- a/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection_with_customized_jobs.yaml
+++ b/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection_with_customized_jobs.yaml
@@ -12,7 +12,7 @@ kaniko-build:
   - mkdir -p /kaniko/.docker
   - >-
     echo
-    '{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$REGISTRY_USERNAME\",\"password\":\"$REGISTRY_PASSWORD\"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
     > /kaniko/.docker/config.json
   - mkdir -p image
   - >-
@@ -95,7 +95,7 @@ crane-push-deploy:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$REGISTRY_USERNAME\",\"password\":\"$REGISTRY_PASSWORD\"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
     > $HOME/.docker/config.json
   - crane validate --tarball ./image/gitlab-ci-project.tar
   - >-
