--- a/test/unittest/addons/container/comparison_files/config.test/docker_client_config.yaml
+++ b/test/unittest/addons/container/comparison_files/config.test/docker_client_config.yaml
@@ -2,5 +2,5 @@ shell_command:
 - mkdir -p $HOME/.docker
 - >-
   echo
-  '{\"auths\":{\"index.docker.com\":{\"username\":\"$REGISTRY_USERNAME\",\"password\":\"$REGISTRY_PASSWORD\"}}}'
+  '{"auths":{"index.docker.com":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
   > $HOME/.docker/config.json
