--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_push_props.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_push_props.yaml
@@ -10,7 +10,7 @@ changed-name-changed-stage:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$REGISTRY_USERNAME\",\"password\":\"$REGISTRY_PASSWORD\"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
     > $HOME/.docker/config.json
   - crane validate --tarball custom/tar/path/gitlab-ci-project.tar
   - >-
