--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_simple_pull.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_simple_pull.yaml
@@ -10,7 +10,7 @@ crane-pull:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$REGISTRY_USERNAME\",\"password\":\"$REGISTRY_PASSWORD\"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
     > $HOME/.docker/config.json
   - mkdir -p /path/to/project
   - crane pull gcr.io/awesome/image:latest /path/to/project/awesome_image.tar
