--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/simple_crane_push_job.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/simple_crane_push_job.yaml
@@ -10,7 +10,7 @@ push-image-crane-push-deploy:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$REGISTRY_USERNAME\",\"password\":\"$REGISTRY_PASSWORD\"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
     > $HOME/.docker/config.json
   - crane validate --tarball /path/to/project/gitlab-ci-project.tar
   - >-
