--- a/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container_without_checks.yaml
+++ b/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container_without_checks.yaml
@@ -10,7 +10,7 @@ crane-pull:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
   - mkdir -p image
   - crane pull index.docker.io/busybox:latest ./image/busybox.tar
@@ -51,7 +51,7 @@ crane-push-deploy:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
   - crane validate --tarball ./image/busybox.tar
   - crane push ./image/busybox.tar quay.io/busybox:11.22.33
