--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/addons_container_jobs_crane_push_registry.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/addons_container_jobs_crane_push_registry.yaml
@@ -8,7 +8,7 @@ push-image-crane-push-deploy:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}},"credHelpers":{"0132456789.dkr.eu-central-1.amazonaws.com":"ecr-login"}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}},"credHelpers":{"0132456789.dkr.eu-central-1.amazonaws.com":"ecr-login"}}'
     > $HOME/.docker/config.json
   - crane validate --tarball /path/to/project/crane.tar
   - crane push /path/to/project/crane.tar index.docker.io/crane:11.22.33
