--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/advanced_crane_copy_job.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/advanced_crane_copy_job.yaml
@@ -10,7 +10,7 @@ with-authentication-crane-copy-deploy:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}},"credHelpers":{"0132456789.dkr.eu-central-1.amazonaws.com":"ecr-login"}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}},"credHelpers":{"0132456789.dkr.eu-central-1.amazonaws.com":"ecr-login"}}'
     > $HOME/.docker/config.json
   - crane validate --remote index.docker.io/alpine:3
   - >-
