--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_advanced_pull.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_advanced_pull.yaml
@@ -10,7 +10,7 @@ crane-pull:
   - mkdir -p $HOME/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}},"credHelpers":{"0132456789.dkr.eu-central-1.amazonaws.com":"ecr-login"}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}},"credHelpers":{"0132456789.dkr.eu-central-1.amazonaws.com":"ecr-login"}}'
     > $HOME/.docker/config.json
   - mkdir -p test/foo/bar
   - crane pull gcr.io/gcix/gcix:main test/foo/bar/gcix_gcix.tar
