--- a/test/unittest/addons/container/comparison_files/kaniko.test/container_kaniko_job_tar_path.yaml
+++ b/test/unittest/addons/container/comparison_files/kaniko.test/container_kaniko_job_tar_path.yaml
@@ -10,7 +10,7 @@ kaniko-build:
   - mkdir -p /kaniko/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$REGISTRY_USERNAME","password":"$REGISTRY_PASSWORD"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > /kaniko/.docker/config.json
   - mkdir -p tar/path/for/image
   - >-
