--- a/test/unittest/addons/container/comparison_files/kaniko.test/default_kaniko_job.yaml
+++ b/test/unittest/addons/container/comparison_files/kaniko.test/default_kaniko_job.yaml
@@ -10,7 +10,7 @@ gcix-kaniko-build:
   - mkdir -p /kaniko/.docker
   - >-
     echo
-    '{"auths":{"https://index.docker.io/v1/":{"username":"$DOCKER_USER","password":"$DOCKER_LOGIN"}}}'
+    '{"auths":{"https://index.docker.io/v1/":{"username":"'$DOCKER_USER'","password":"'$DOCKER_LOGIN'"}}}'
     > /kaniko/.docker/config.json
   - >-
     executor --context /path/to/project --dockerfile /path/to/project/Dockerfile
